--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.16",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.16"
+    "tailwindcss": "^4.0.16",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
