--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.0.16",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
