--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "ios:build": "npm run build && npx cap sync ios && cd ios/App && pod install && xcodebuild -workspace App.xcworkspace -scheme App -configuration Debug -sdk iphonesimulator -derivedDataPath build",
-        "ios:open": "npx cap sync ios && open ios/App/App.xcworkspace"
+        "ios:open": "npx cap sync ios && open ios/App/App.xcworkspace",
+        "android:build": "npm run build && npx cap sync android && cd android && ./gradlew assembleDebug",
+        "android:open": "npx cap open android"
     },
     "dependencies": {
+        "@capacitor/android": "^7.2.0",
         "@capacitor/cli": "^7.2.0",
         "@capacitor/core": "^7.2.0",
+        "@capacitor/ios": "^7.2.0",
         "@tailwindcss/vite": "^4.0.16",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.2",
