--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@tailwindcss/vite": "^4.0.16",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.2",
+        "framer-motion": "^12.23.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
