--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@capacitor/cli": "^7.2.0",
         "@capacitor/core": "^7.2.0",
         "@capacitor/ios": "^7.2.0",
+        "@capacitor/status-bar": "^7.0.3",
         "@tailwindcss/vite": "^4.0.16",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.2",
