--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "typescript-eslint": "^8.29.1"
     },
     "devDependencies": {
+        "@capacitor/assets": "^3.0.5",
         "@eslint/js": "^9.21.0",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.21.0",
