--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,7 @@
 {
-    "display": "standalone",
-    "short_name": "BarbellBook"
+  "display": "standalone",
+  "short_name": "BarbellBook",
+  "name": "BarbellBook - Gym Workout Tracker",
+  "start_url": "/",
+  "scope": "/"
 }
