--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,5 +3,30 @@
   "short_name": "BarbellBook",
   "name": "BarbellBook - Gym Workout Tracker",
   "start_url": "/",
-  "scope": "/"
+  "scope": "/",
+  "theme_color": "#000000",
+  "background_color": "#ffffff",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "favicon.png",
+      "sizes": "32x32",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "app-icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "permissions": [
+    "notifications"
+  ],
+  "categories": ["health", "fitness", "sports"]
 }
